avance con contacto.html, lo hice con Boostrap

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="./imagenes/1633092185921.jpg" alt="fotobanda">
     </section>
 
-    <h1>NOVEDADES</h1>
+    <h1 class="tituloNovedades">NOVEDADES NONPALIDECE</h1>
     
     <div class="flex-container">
         <div class="flex-item">
