--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>NONPALIDECE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-danger">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">Inicio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +35,8 @@
     </section>
 
     <h1 class="tituloNovedades">NOVEDADES NONPALIDECE</h1>
+
+    <h3 class="noticiasNonpa">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut hic modi molestias. Quaerat, dolorem odio? Tenetur, animi suscipit! Magni vitae ipsum totam fugit dolorum sint sapiente, perspiciatis quasi fuga consequatur?</h3>
     
     <div class="flex-container">
         <div class="flex-item">
@@ -84,7 +86,7 @@
                 </li>
                 <li>
                     <a href="https://twitter.com/nonpaoficial" target="_blank">
-                    <img src="./imagenes/gorjeo.png" alt="logotwitter"width="30px" height="30px"></a></li>
+                    <img src="./imagenes/gorjeo.png" alt="logotwitter" width="30px" height="30px"></a></li>
             </ul>
         </div>
     </footer>
